--- a/FMML_M1L3.ipynb
+++ b/FMML_M1L3.ipynb
@@ -1033,122 +1033,82 @@
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
+        "import numpy as np  # Added import statement for numpy\n",
         "from tensorflow.keras.datasets import mnist\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPooling2D\n",
         "from tensorflow.keras.utils import to_categorical\n",
-        "from sklearn.metrics import accuracy_score, classification_report\n",
-        "import numpy as np\n",
+        "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "# 1. Load and prepare the data\n",
+        "# Load and prepare data (MNIST example)\n",
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
         "\n",
-        "# Use only 50 images per class for training\n",
-        "num_images_per_class = 50\n",
-        "x_train = np.concatenate([x_train[y_train == i][:num_images_per_class] for i in range(10)])\n",
-        "y_train = np.concatenate([y_train[y_train == i][:num_images_per_class] for i in range(10)])\n",
+        "# Preprocess data\n",
+        "x_train = x_train.reshape((x_train.shape[0], 28, 28, 1)).astype('float32') / 255\n",
+        "x_test = x_test.reshape((x_test.shape[0], 28, 28, 1)).astype('float32') / 255\n",
+        "y_train = to_categorical(y_train)\n",
+        "y_test = to_categorical(y_test)\n",
         "\n",
-        "# Preprocessing\n",
-        "x_train = x_train.reshape(-1, 28, 28, 1).astype('float32') / 255.0\n",
-        "x_test = x_test.reshape(-1, 28, 28, 1).astype('float32') / 255.0\n",
-        "y_train = to_categorical(y_train, 10)\n",
-        "y_test = to_categorical(y_test, 10)\n",
+        "# Split the data into training and validation sets\n",
+        "x_train, x_val, y_train, y_val = train_test_split(x_train, y_train, test_size=0.2, random_state=None)  # Changed random state to None for reproducibility\n",
         "\n",
-        "# 2. Build and train the model\n",
+        "# Build the model\n",
         "model = Sequential([\n",
         "    Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
         "    MaxPooling2D((2, 2)),\n",
         "    Flatten(),\n",
-        "    Dense(128, activation='relu'),\n",
+        "    Dense(64, activation='relu'),\n",
         "    Dense(10, activation='softmax')\n",
         "])\n",
         "\n",
-        "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
-        "model.fit(x_train, y_train, epochs=5, batch_size=32, validation_split=0.2)\n",
+        "# Compile the model\n",
+        "model.compile(optimizer='adam',\n",
+        "              loss='categorical_crossentropy',\n",
+        "              metrics=['accuracy'])\n",
         "\n",
-        "# 3. Evaluate the model\n",
-        "y_pred_prob = model.predict(x_test)\n",
-        "y_pred = np.argmax(y_pred_prob, axis=1)\n",
-        "y_test_labels = np.argmax(y_test, axis=1)\n",
+        "# Train the model\n",
+        "model.fit(x_train, y_train, epochs=5, validation_data=(x_val, y_val))\n",
         "\n",
-        "accuracy = accuracy_score(y_test_labels, y_pred)\n",
-        "report = classification_report(y_test_labels, y_pred)\n",
+        "# Evaluate the model on the test set\n",
+        "test_loss, test_acc = model.evaluate(x_test, y_test)\n",
         "\n",
-        "print(f'Accuracy: {accuracy:.4f}')\n",
-        "print('Classification Report:')\n",
-        "print(report)\n"
+        "print(f\"Test accuracy: {test_acc:.4f}\")\n",
+        "print(f\"Test loss: {test_loss:.4f}\")\n",
+        "\n",
+        "# Evaluate the model on the validation set\n",
+        "val_loss, val_acc = model.evaluate(x_val, y_val)\n",
+        "print(f\"Validation accuracy: {val_acc:.4f}\")\n",
+        "print(f\"Validation loss: {val_loss:.4f}\")"
       ],
       "metadata": {
-        "id": "SZWajRnnqarF",
-        "outputId": "699d1c8f-5b91-4e36-a37d-015650c34694",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8vQkSTl5yz5u",
+        "outputId": "5d398f24-f098-4cdb-eb55-41fd88c8c7d7"
       },
-      "execution_count": 1,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-            "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/keras/src/layers/convolutional/base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
             "Epoch 1/5\n",
-            "\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 145ms/step - accuracy: 0.4654 - loss: 1.7187 - val_accuracy: 0.0000e+00 - val_loss: 6.3986\n",
+            "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 23ms/step - accuracy: 0.8902 - loss: 0.3845 - val_accuracy: 0.9714 - val_loss: 0.0928\n",
             "Epoch 2/5\n",
-            "\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 53ms/step - accuracy: 0.8990 - loss: 0.3927 - val_accuracy: 0.0000e+00 - val_loss: 9.9678\n",
+            "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 23ms/step - accuracy: 0.9799 - loss: 0.0659 - val_accuracy: 0.9813 - val_loss: 0.0631\n",
             "Epoch 3/5\n",
-            "\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 54ms/step - accuracy: 0.9306 - loss: 0.2370 - val_accuracy: 0.0000e+00 - val_loss: 12.0438\n",
+            "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 22ms/step - accuracy: 0.9884 - loss: 0.0391 - val_accuracy: 0.9832 - val_loss: 0.0548\n",
             "Epoch 4/5\n",
-            "\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 46ms/step - accuracy: 0.9805 - loss: 0.0864 - val_accuracy: 0.0000e+00 - val_loss: 11.9328\n",
+            "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m39s\u001b[0m 26ms/step - accuracy: 0.9908 - loss: 0.0300 - val_accuracy: 0.9784 - val_loss: 0.0700\n",
             "Epoch 5/5\n",
-            "\u001b[1m13/13\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 48ms/step - accuracy: 0.9850 - loss: 0.0574 - val_accuracy: 0.0000e+00 - val_loss: 12.6840\n",
-            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 17ms/step\n",
-            "Accuracy: 0.7288\n",
-            "Classification Report:\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.88      0.96      0.92       980\n",
-            "           1       0.84      0.97      0.90      1135\n",
-            "           2       0.83      0.88      0.85      1032\n",
-            "           3       0.63      0.93      0.75      1010\n",
-            "           4       0.79      0.93      0.85       982\n",
-            "           5       0.68      0.74      0.71       892\n",
-            "           6       0.87      0.91      0.89       958\n",
-            "           7       0.50      0.93      0.65      1028\n",
-            "           8       0.00      0.00      0.00       974\n",
-            "           9       0.00      0.00      0.00      1009\n",
-            "\n",
-            "    accuracy                           0.73     10000\n",
-            "   macro avg       0.60      0.72      0.65     10000\n",
-            "weighted avg       0.60      0.73      0.66     10000\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, msg_start, len(result))\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, msg_start, len(result))\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, msg_start, len(result))\n"
+            "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 21ms/step - accuracy: 0.9933 - loss: 0.0212 - val_accuracy: 0.9842 - val_loss: 0.0541\n",
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - accuracy: 0.9794 - loss: 0.0588\n",
+            "Test accuracy: 0.9835\n",
+            "Test loss: 0.0472\n",
+            "\u001b[1m375/375\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 9ms/step - accuracy: 0.9852 - loss: 0.0492\n",
+            "Validation accuracy: 0.9842\n",
+            "Validation loss: 0.0541\n"
           ]
         }
       ]
